--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -1,11 +1,18 @@
 ---
-title: "Appendices: Use of satellite data for understanding and predicting oil sardine (*Sardinella longiceps*) catch variability along the southwest coast of India"
+title: 'Appendices: Use of satellite data for understanding and predicting oil sardine
+  (*Sardinella longiceps*) catch variability along the southwest coast of India'
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
+  pdf_document: default
+  html_document: default
   word_document: default
-  html_document:
-    fig_caption: yes
+header-includes: \usepackage[labelformat=empty]{caption}
 ---
+
+```{r child = 'setup.Rmd'}
+#Generic setup code common across all Rmds
+```
+
 
 # Appendix A: Tests for the structure of the Qtr 3 and non-Qtr 3 catch models
 
@@ -27,7 +34,7 @@ cat("\\clearpage")
 
 # Appendix C: Correlation of covariates across the boxes
 
-```{r cov-correlation, fig.cap="Correlation of the covariates across boxes.  Correlation is shown by the width of the lines between neighboring boxes.",fig.width=6,fig.height=8.5,message=FALSE,warning=FALSE, echo=FALSE}
+```{r cov-correlation, fig.cap="Correlation of the covariates across boxes.  Correlation is shown by the width of the lines between neighboring boxes.",fig.width=5.5,message=FALSE,warning=FALSE, echo=FALSE}
 library(maps)
 library(mapdata)
 par(mfrow=c(2,2),mar=c(0,1,1,1))
