--- a/Table 1.Rmd
+++ b/Table 1.Rmd
@@ -1,20 +1,14 @@
 ---
 title: 'Table 1: Spawner Model Selection'
 output:
-  word_document: default
   pdf_document: default
   html_document: default
-fontsize: 12pt
+  word_document: default
+header-includes: \usepackage[labelformat=empty]{caption}
 ---
 
-```{r setup-table1, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-require(SardineForecast)
-require(stringr)
-require(mgcv)
-require(knitr)
-# If this is being called from another Rmd (as a child), this counter will exist
-if(!exists(".rmdenvir")) .rmdenvir = environment()
+```{r child = 'setup.Rmd'}
+#Generic setup code common across all Rmds
 ```
 
 ```{r setup-data-table1, echo=FALSE}
@@ -140,7 +134,7 @@ seltable=rbind(seltable,tmp1,tmp2)
 
 ```{r print-table1, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "Residual deviance", "F", "p value", "AIC")
-if(knitr::opts_knit$get("rmarkdown.pandoc.to")=="latex") colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
 
 thecap = "Model selection tests of time-dependency and linearity for the $S_t$ model using F-tests of nested models fit to log landings data.  $S_t$ is the catch during the spawning period (Qtr 3 = July-Sep) of season $t$ (Jul-Jun). $N_{t-1}$ is the catch during the prior sardine season after the spawning period (the 9-months following Qtr 3, Oct-Jun, of the previous sardine season). $N_{t-2}$ is the same for two seasons prior.  $s()$ is a non-linear function of the response variable."
 
