--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tables A1 a-b: Spawner Model Selection Tables"
+title: "Table A2 a-c"
 output:
   pdf_document: default
   html_document: default
@@ -8,74 +8,21 @@ header-includes: \usepackage[labelformat=empty]{caption}
 ---
 
 ```{r child = 'setup.Rmd'}
-#Generic setup code common across all Rmds
+#Generic setup code common across all Rmds; run code in setup.Rmd if not knitting
 ```
 
-```{r setup-data-tableA1, echo=FALSE}
-reg="Kerala"
-Qtr=3
-respdat=data.frame(
-  spawners0=oilsardine_qtr[[reg]][oilsardine_qtr$Qtr==Qtr]
-)
-catch0=filter(oilsardine_qtr[[reg]],c(1,1,1,1),sides=1)[seq(6,dim(oilsardine_qtr)[1],4)]
-respdat$Catch0 = c(catch0,NA)
-respdat=log(respdat)
+```{r seltableA1a, echo=FALSE}
+respdat = fullrespdat[which(fullrespdat$Year==1982):which(fullrespdat$Year==2015),]
 
-covnames=c(
-  "log.CHL.3","log.CHL.4","log.CHL.5",
-  "log.CHL.3","log.CHL.4","log.CHL.5",
-  "log.CHL.3","log.CHL.4","log.CHL.5",
-  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
-  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
-  "SST.3","SST.4","SST.5",
-  "SST.3","SST.4","SST.5",
-  "SST.3","SST.4","SST.5",
-  "precip.gpcp.kerala", "precip.gpcp.kerala")
-covmon=list(
-  6:7, 6:7, 6:7,
-  7:9,7:9,7:9,
-  7:12, 7:12, 7:12,
-  7:12, 7:12, 7:12,
-  6:7,6:7,6:7,
-  9:12,9:12,9:12,
-  6:7,6:7,6:7,
-  7:9,7:9,7:9,
-  4:5,6:7)
-n=2 #max lag in cov to use
-for(i in 1:length(covnames)){
-  covname=covnames[i]
-  mon=covmon[[i]]
-  varname=paste(covname,".mon",mon[1],"to",mon[length(mon)],".0",sep="")
-  covdat=tapply(seio_covariates_mon[[covname]],seio_covariates_mon$Year,function(x){mean(x[mon],na.rm=TRUE)})
-  respdat[[varname]]=covdat
-}
-#add lags
-for(i in colnames(respdat)){
-  name=paste(str_sub(i, 1, str_length(i)-1),"1",sep="")
-  respdat[[name]]=c(NA,respdat[[i]][1:(dim(respdat)[1]-1)])
-  name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
-  respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
-}
-respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
-#add Catch - spawners
-respdat$nspawners0 = respdat$Catch0 - respdat$spawners0
-respdat$nspawners1 = respdat$Catch1 - respdat$spawners1
-respdat$nspawners2 = respdat$Catch2 - respdat$spawners2
-respdat$Catch12 = log(exp(respdat$Catch1)+exp(respdat$Catch2))
-fullrespdat = respdat
-```
-
-```{r seltable-timedep-A1a, echo=FALSE}
-seltable = data.frame(Model="Time dependency test 1956-2015 data", Residual.df="", Residual.dev="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
-
-respdat = fullrespdat
+#set up table
+seltable = data.frame(Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
 
 #5 is most complex
-m5 = gam(spawners0 ~ s(Catch1, sp=0.6) + s(Catch2, sp=0.6), data=respdat)
+m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
 m0=m5
 m1 = gam(spawners0 ~ 1, data=m0$model)
-m2 = gam(spawners0 ~ Catch1, data=m0$model)
-m3 = gam(spawners0 ~ Catch1 + Catch2, data=m0$model)
+m2 = gam(spawners0 ~ spawners1, data=m0$model)
+m3 = gam(spawners0 ~ spawners1 + spawners2, data=m0$model)
 a=anova(m1,m2,m3, test="F")
 
 #simple level model
@@ -84,36 +31,31 @@ tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\epsilon$", Residual.df=round(a
 tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;(Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#linear ln Catch1
+#linear ln N_t
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #linear ln Catch1 + ln Catch2
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(N_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i], digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(S_{t-1})$ + $\\beta_2 ln(S_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
-
-
-##################  With shorter time frame
-respdat = fullrespdat[which(fullrespdat$Year==1982):which(fullrespdat$Year==2015),]
 
 ## Space
 tmp1 = data.frame(Model="&nbsp;", Residual.df="&nbsp;", Residual.dev="&nbsp;", F="&nbsp;", p.value="&nbsp;", AIC="")
-tmp2 = data.frame(Model=paste("Time dependency test ", min(respdat$Year),"-", max(respdat$Year), " data", sep="") , Residual.df="", Residual.dev="", F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2 = data.frame(Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-
 #5 is most complex
-m5 = gam(spawners0 ~ s(Catch1, sp=0.6) + s(Catch2, sp=0.6), data=respdat)
+m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
 m0=m5
 m1 = gam(spawners0 ~ 1, data=m0$model)
-m2 = gam(spawners0 ~ Catch1, data=m0$model)
-m3 = gam(spawners0 ~ Catch1 + Catch2, data=m0$model)
+m2 = gam(spawners0 ~ nspawners1, data=m0$model)
+m3 = gam(spawners0 ~ nspawners1 + nspawners2, data=m0$model)
 a=anova(m1,m2,m3, test="F")
 
 #simple level model
@@ -122,100 +64,283 @@ tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\epsilon$", Residual.df=round(a
 tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;(Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#linear ln Catch1
+#linear ln N_t
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
 #linear ln Catch1 + ln Catch2
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(N_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i], digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(N_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
+## Space
+tmp1 = data.frame(Model="&nbsp;", Residual.df="&nbsp;", Residual.dev="&nbsp;", F="&nbsp;", p.value="&nbsp;", AIC="")
+tmp2 = data.frame(Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners1, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ nspawners1, data=m0$model)
+m3 = gam(spawners0 ~ nspawners1 + spawners1, data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#linear ln N_t
+i=2; mod=paste("m",i,sep="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#linear ln N1 + ln S1
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ nspawners1, data=m0$model)
+m3 = gam(spawners0 ~ nspawners1 + spawners2, data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#linear ln N1 + ln S2
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+```
+
+```{r print-tableA1a, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "Residual deviance", "F", "p value", "AIC")
-if(knitr::opts_knit$get("rmarkdown.pandoc.to")=="latex") colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
-thecap=paste("F-tests of nested models of the time-dependency of the catch in Qtr 3 using the full catch data (1956-2015) or only the data that overlap with the satellite covariate data (1982-2015).  See Table",ref("tab:spawner_model_selection"),"for definitions.")
-fullcap=paste("Table ", ref("tabappA:spawner-model-time", pre="A"), ". ", thecap, sep="")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
+
+thecap=paste("Model selection tests of time-dependency the $S_t$ model using F-tests of nested models fit to log landings data.  $S_t$ is the catch during the spawning period (Jul-Sep) of season $t$ (Jul-Jun). $N_t$ is the catch during the non-spawning period (Oct-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  Test C uses both. For Test C, the nestedness is lines 1-3 and lines 1-2 and 4.")
+fullcap=paste("Table ", ref("tabappA:spawner-model-time-a", pre="A"), ". ", thecap, sep="")
 kable(seltable, align="lccccc", caption=fullcap)
 ```
 
 #
 
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
 
-```{r seltable-linearity-A1b, echo=FALSE}
-seltable = data.frame(Model="Linearity test 1956-2015 data", Residual.df="", Residual.dev="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
 
-respdat=fullrespdat
+```{r seltableA1b, echo=FALSE}
+respdat = fullrespdat[which(fullrespdat$Year==1982):which(fullrespdat$Year==2015),]
 
-m3 = gam(spawners0 ~ s(Catch1, sp=0.6) + s(Catch2, sp=0.6), data=respdat)
-m0=m3
-m1 = gam(spawners0 ~ Catch1, data=m0$model)
-m2 = gam(spawners0 ~ s(Catch1, sp=0.6), data=m0$model)
+#set up table
+seltable = data.frame(Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
+
+#5 is most complex
+m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ spawners1, data=m0$model)
+m2 = gam(spawners0 ~ s(spawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(spawners1, sp=0.6) + s(spawners2, sp=0.6), data=m0$model)
 a=anova(m1,m2,m3, test="F")
 
-#linear ln Catch1
+#linear on S1 model
 i=1; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#non-linear ln Catch1
+#linear ln N_t
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2) )
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="" )
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(S_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#non-linear ln Catch1 + ln Catch2
+#linear ln Catch1 + ln Catch2
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $s(ln(N_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i], digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2) )
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="" )
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(S_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
-
-##################  With shorter time frame
-respdat = fullrespdat[which(fullrespdat$Year==1982):which(fullrespdat$Year==2015),]
 
 ## Space
 tmp1 = data.frame(Model="&nbsp;", Residual.df="&nbsp;", Residual.dev="&nbsp;", F="&nbsp;", p.value="&nbsp;", AIC="")
-tmp2 = data.frame(Model=paste("Linearity test ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2 = data.frame(Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-m3 = gam(spawners0 ~ s(Catch1, sp=0.6) + s(Catch2, sp=0.6), data=respdat)
-m0=m3
-m1 = gam(spawners0 ~ Catch1, data=m0$model)
-m2 = gam(spawners0 ~ s(Catch1, sp=0.6), data=m0$model)
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ nspawners1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(nspawners2, sp=0.6), data=m0$model)
 a=anova(m1,m2,m3, test="F")
 
-#linear ln Catch1
+#linear on N1
 i=1; mod=paste("m",i,sep="")
-aa = summary(get(mod))
 tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="" )
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#non-linear ln Catch1
+#linear ln N_t
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2) )
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="" )
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
-#non-linear ln Catch1 + ln Catch2
+#linear ln Catch1 + ln Catch2
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
-tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $s(ln(N_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i], digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2) )
-tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(m3$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="" )
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
 seltable=rbind(seltable,tmp1,tmp2)
 
+## Space
+tmp1 = data.frame(Model="&nbsp;", Residual.df="&nbsp;", Residual.dev="&nbsp;", F="&nbsp;", p.value="&nbsp;", AIC="")
+tmp2 = data.frame(Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners1, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(spawners1, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#nonlinear ln N_t
+i=2; mod=paste("m",i,sep="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#nonlinear ln N1 + ln S1
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#linear ln N1 + ln S2
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+```
+
+```{r print-tableA1b, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "Residual deviance", "F", "p value", "AIC")
-if(knitr::opts_knit$get("rmarkdown.pandoc.to")=="latex") colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
-thecap=paste("F-tests of nested models of the linearity of the catch in Qtr 3 using the full catch data (1956-2015) or only the data that overlap with the satellite covariate data (1982-2015).  See Table",ref("tab:spawner_model_selection"),"for definitions.")
-fullcap=paste("Table ", ref("tabappA:spawner-model-linearity", pre="A"), ". ", thecap, sep="")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
+
+thecap=paste("Model selection tests of time-dependency the $S_t$ model using non-linear responses instead of linear responses as in Table",ref("tabappA:spawner-model-time-a", pre="A"), "See Table",ref("tabappA:spawner-model-time-a", pre="A"), "for an explanation of the parameters and model set-up.")
+fullcap=paste("Table ", ref("tabappA:spawner-model-time-b", pre="A"), ". ", thecap, sep="")
 kable(seltable, align="lccccc", caption=fullcap)
 ```
+
+
+#
+
+#
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+
+```{r seltableA1c, echo=FALSE}
+respdat = fullrespdat[which(fullrespdat$Year==1956):which(fullrespdat$Year==2015),]
+
+#set up table
+seltable = data.frame(Model=paste("Time dependency test B linear ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="", stringsAsFactors=FALSE)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ nspawners1, data=m0$model)
+m3 = gam(spawners0 ~ nspawners1 + nspawners2, data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#simple level model
+i=1; mod=paste("m",i,sep="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#linear ln N_t
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#linear ln Catch1 + ln Catch2
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(N_{t-2})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+## Space
+tmp1 = data.frame(Model="&nbsp;", Residual.df="&nbsp;", Residual.dev="&nbsp;", F="&nbsp;", p.value="&nbsp;", AIC="")
+tmp2 = data.frame(Model=paste("Linearity test ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), Residual.df="", Residual.dev="", F="", p.value="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ nspawners1, data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m4 = gam(spawners0 ~ s(nspawners1, sp=0.6)+s(nspawners2, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3,m4, test="F")
+
+#linear ln N_t
+i=2; mod=paste("m",i,sep="")
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F="", p.value="", AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#non linear ln Catch1
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#linear ln Catch1 + ln Catch2
+i=4; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon$", Residual.df=round(a[["Resid. Df"]][i],digits=1), Residual.dev=round(a[["Resid. Dev"]][i],digits=2), F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), AIC=round(AIC(get(mod)), digits=2))
+tmp2=data.frame(Model=paste("&nbsp;&nbsp;&nbsp;($R^2 adj$ = ",100*round(aa$r.sq, digits=2), "%, Var($\\epsilon$) = ", round(get(mod)$sig2, digits=2),")", sep=""), Residual.df="", Residual.dev="", F="", p.value ="", AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+```
+
+```{r print-tableA1c, echo=FALSE}
+colnames(seltable)=c("Model", "Residual df", "Residual deviance", "F", "p value", "AIC")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "\\shortstack{Residual\\\\deviance}", "F", "\\shortstack{p\\\\value}", "AIC")
+
+thecap=paste("Model selection tests of time-dependency for the $S_t$ model using 1956-2015 data.  See Table",ref("tabappA:spawner-model-time-a", pre="A"),"for definitions.")
+fullcap=paste("Table ", ref("tabappA:spawner-model-time-c", pre="A"), ". ", thecap, sep="")
+kable(seltable, align="lccccc", caption=fullcap)
+```
+
+
+
