--- a/setup.Rmd
+++ b/setup.Rmd
@@ -16,3 +16,68 @@ if(!exists(".rmdenvir")) .rmdenvir = environment()
 knitOut=knitr::opts_knit$get("rmarkdown.pandoc.to")
 if(length(knitOut)==0) isLatex=FALSE else isLatex=(knitOut=="latex")
 ```
+
+
+```{r message=FALSE,warning=FALSE, echo=FALSE}
+Qtr=3 # start of season
+reg="Kerala"
+respdat=data.frame(
+  spawners0=oilsardine_qtr[[reg]][oilsardine_qtr$Qtr==3]
+  )
+catch0=filter(oilsardine_qtr[[reg]],c(1,1,1,1),sides=1)[seq(6,dim(oilsardine_qtr)[1],4)]
+respdat$Catch0 = c(catch0,NA)
+#add Catch - spawners
+respdat$nspawners0 = respdat$Catch0 - respdat$spawners0
+
+respdat=log(respdat)
+
+covnames=c(
+  "log.CHL.3","log.CHL.4","log.CHL.5",
+  "log.CHL.3","log.CHL.4","log.CHL.5",
+  "log.CHL.3","log.CHL.4","log.CHL.5",
+  "log.CHL.3","log.CHL.4","log.CHL.5",
+  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
+  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
+  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
+  "SST.UPW.3","SST.UPW.4","SST.UPW.5",
+  "SST.3","SST.4","SST.5",
+  "SST.3","SST.4","SST.5",
+  "SST.3","SST.4","SST.5",
+  "SST.3","SST.4","SST.5")
+covmon=list(
+  1:3, 1:3, 1:3,
+  6:10, 6:10, 6:10,
+  6:7,6:7,6:7,
+  7:12, 7:12, 7:12,
+  1:3, 1:3, 1:3,
+  6:10, 6:10, 6:10,
+  6:7,6:7,6:7,
+  7:12, 7:12, 7:12,
+  1:3, 1:3, 1:3,
+  6:10, 6:10, 6:10,
+  6:7,6:7,6:7,
+  7:12, 7:12, 7:12
+  )
+n=2 #max lag in cov to use
+for(i in 1:length(covnames)){
+  covname=covnames[i]
+  mon=covmon[[i]]
+  varname=paste(covname,".mon",mon[1],"to",mon[length(mon)],".0",sep="")
+  covdat=tapply(seio_covariates_mon[[covname]],seio_covariates_mon$Year,function(x){mean(x[mon],na.rm=TRUE)})
+  if(str_detect(covname, "mon1to3")){
+    respdat[[varname]]=c(covdat[-1],NA)
+  }else{
+    respdat[[varname]]=covdat
+  }
+}
+#add lags
+for(i in colnames(respdat)){
+  name=paste(str_sub(i, 1, str_length(i)-1),"1",sep="")
+  respdat[[name]]=c(NA,respdat[[i]][1:(dim(respdat)[1]-1)])
+  name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
+  respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
+}
+respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
+
+fullrespdat = respdat
+```
